# clearhead-core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.clearhead/: .gitignore  archive.ttl  config.json  next.actions  next.completed.actions  next.completed.open.ttl  workspace.json
.clearhead/charters/: .next.json  .workspace-rework.json  charters.completed.actions  clearhead-core.completed.actions  next.actions  next.completed.actions  refactor_storage.actions  refactor_storage.completed.actions  refactor_storage.md  semantic_export_plan.md  workspace-rework.actions  workspace-rework.completed.actions  workspace-rework.md
.clearhead/logs/: 2026-04.actions
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  jsonld_export_contract.md  simplify_store_interface.md
src/: charter.rs  config.rs  crdt.rs  diff.rs  display.rs  document.rs  domain.rs  entities.rs  format.rs  graph.rs  lib.rs  lint.rs  reference.rs  store.rs  sync.rs  telemetry.rs  treesitter.rs
src/actions/: convert.rs  diff.rs  mod.rs  parser.rs  source.rs
src/config/: loader.rs
src/crdt/: convert.rs  mod.rs  sync_utils.rs  types.rs
src/domain/: diff.rs  filter.rs  mod.rs
src/graph/: insert.rs  jsonld.rs  mod.rs  query.rs  serialize.rs  shape.rs
src/resources/: actions.context.v4.json  actions.schema.v4.json  ontology-out.example.v4.jsonld
src/telemetry/: ndjson.rs
src/workspace/: action_files.rs  acts.rs  archive_actions.rs  archive_charter.rs  charter.rs  detection.rs  durability.rs  expand.rs  ics.rs  (+6 more)
tests/: actions_parsing.rs  graph_queries.rs  graph_roundtrip.rs  workspace_store.rs
(+50 files in other folders)
