[package]
name = "clearhead_core"
description = "Core domain model and logic for the ClearHead framework"
version = "0.1.0"
authors = ["Darrion Burgess <darrionburgess@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/ClearHeadToDo-Devs/clearhead-core.git"

[dependencies]
# Core domain dependencies (no filesystem/config dependencies!)
automerge = "0.7.2"
autosurgeon = { version = "0.10.1", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7.1"
oxigraph = "0.5.3"
quick-xml = { version = "0.31", features = ["serialize"] }
rrule = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
topiary-core = "0.7.3"
topiary-tree-sitter-facade = "0.7.3"
tree-sitter = "0.26.3"
tree-sitter-actions = { path = "../tree-sitter-actions", version = "0.9.4" }

[dependencies.uuid]
version = "1.0"
features = [
  "serde",
  "v4",
  "v7",
]

[dev-dependencies]
tempfile = "3.8"
